<resources>
    <string name="app_name">1–2–3 Weight</string>
    <string name="points">Points</string>
    <string name="calories_description">Kilocalories per 100 Grams</string>
    <string name="points_per_portion">Points per Portion</string>
    <string name="fat_description">Fat per 100 Grams</string>
    <string name="portion_description">Portion in Grams</string>
    <string name="reset_description">Reset formula</string>
    <string name="indicator_image_description">An indicator image for low normal and high points</string>
</resources>
